--- a/style.css
+++ b/style.css
@@ -11,13 +11,18 @@ body {
   text-align: center;
   color : #FF0000 ; 
 }
+#h2 {
+  font-size: 40px;
+  text-align: center;
+  color : #FF0000 ; 
+}
  #p1{
    font-size: 30px;
    text-align:left;
    color: black;
 }
 
- #p2
+ #p2{
    font-size: 20px;
    text-align:left;
    color: black;
